# ue5_warning_aggregator

./: Cargo.toml  README.md
src/: command_aggregate.rs  main.rs  output.rs
