[package]
name = "ue5_warning_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.1.1"
features = ["cargo"]
 
[dependencies.similar-string]
version = "1.4.3"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies.anyhow]
version = "1.0"

